# cookie-stealer-rust

./: Cargo.toml
src/: main.rs
